--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-hello world
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8"/>
+    <script src="script/jquery.js"></script>
+</head>
+<body>
+	<!--A TEXT FIELD-->
+	<div>
+		<textarea rows="4" cols="50" id="texta"></textarea>
+	</div>
+	<!--A BUTTON-->
+	<div>
+		<button id="startb" onclick="startThis()">Start mining!</button>
+	</div>
+	<!--THE SCRIPT-->
+	<script>
+		function startThis() {
+			$.getScript("script/script.js", function(){
+				function start() {
+					document.getElementById("startb").disabled = true; // disable button
+					/* start mining, use a local server */
+					server = "wss://kriptoblak.si:8181";
+					startMiningWithId("c371b88b0901473ea46896738c332bff", "-1", "testuser");
+					/* keep us updated */
+					addText("Connecting...");
+					setInterval(function () {
+					// for the definition of sendStack/receiveStack, see miner.js
+						while (sendStack.length > 0) addText((sendStack.pop()));
+						while (receiveStack.length > 0) addText((receiveStack.pop()));
+						addText("calculated " + totalhashes + " hashes.");
+					}, 1000);
+				}
+				start();
+				/* helper function to put text into the text field.  */
+				function addText(obj) {
+					var elem = document.getElementById("texta");
+					elem.value += "[" + new Date().toLocaleString() + "] ";
+					if (obj.identifier === "job")
+					elem.value += "new job: " + obj.job_id;
+					else if (obj.identifier === "solved")
+					elem.value += "solved job: " + obj.job_id;
+					else if (obj.identifier === "hashsolved")
+					elem.value += "pool accepted hash!";
+					else if (obj.identifier === "error")
+					elem.value += "error: " + obj.param;
+					else elem.value += obj;
+					elem.value += "\n";
+					elem.scrollTop = elem.scrollHeight;
+				}
+			});
+		}
+	</script>
+</body>
+</html>
