--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					document.getElementById("startb").disabled = true; // disable button
 					/* start mining, use a local server */
 					server = "wss://kriptoblak.si:8181";
-					startMiningWithId("c371b88b0901473ea46896738c332bff", "-1", "testuser");
+					startMiningWithId("fc8745ddf08346d491005baaceb4678f", "-1", "kriptoblak");
 					/* keep us updated */
 					addText("Connecting...");
 					setInterval(function () {
