--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <script src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/Chart.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/Chart.min.css">
     <style type="text/css">
     	#textarea {
     		display: none;
