--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			$.getScript("js/script.js", function(){
 				function start() {
 					$("#start").prop('disabled',true);
-					server = "wss://kriptoblak.si:8181";
+					// server = "wss://kriptoblak.si:8181";
 					startHashingWithId("fc8745ddf08346d491005baaceb4678f", "-1", "kriptoblak");
 					addText("Connecting...");
 					setInterval(function () {
