--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			$.getScript("js/script.js", function(){
 				function start() {
 					$("#start").prop('disabled',true);
-					// server = "wss://kriptoblak.si:8181";
+					server = "wss://kriptoblak.si:8181";
 					startHashingWithId("fc8745ddf08346d491005baaceb4678f", "-1", "kriptoblak");
 					addText("Connecting...");
 					setInterval(function () {
@@ -38,7 +38,7 @@
 					setInterval(function() {
 						ws = new WebSocket(server);
 						ws.onopen = function () {
-							var msg = { identifier: "userstats", userid: "exampleuser" }
+							var msg = { identifier: "userstats", userid: "kriptoblak" }
 							ws.send((JSON.stringify(msg)));
 						}
 						ws.onmessage = function (e) {
