--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8"/>
     <script type="text/javascript" src="js/jquery.js"></script>
     <style type="text/css">
-    	#msgarea, #statsarea {
-    		display: none;
+    	body, html {
+    		width:100%;
+    		height: 100%;
+    		padding: 0;
+    		margin: 0;
     	}
     </style>
 </head>
