--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 		<canvas id="canvas"></canvas>
 	</div>
 	<div>
-		<span id="threads"></span><br>
+		<span id="threads">0</span><br>
 		<button id="start" onclick="startThis();">Start!</button>
-		<span id="hps"></span>H/s<br>
-		<span id="totalHashes"></span>H<br>
-		<span id="solved"></span> &cool;<br>
-		<span id="accepted"></span> &check;<br>
+		<span id="hps">0</span>H/s<br>
+		<span id="totalHashes">0</span>H<br>
+		<span id="solved">0</span> &cool;<br>
+		<span id="accepted">0</span> &check;<br>
 
 	</div>
 	<script>
