--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     		padding: 0;
     		margin: 0;
     	}
-    	#msgarea, #statsarea, #canvas {
+    	#msgarea, #statsarea {
 			display: none;
 		}
     </style>
