--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8"/>
+    <link rel="stylesheet" type="text/css" href="css/Chart.min.css">
     <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/Chart.min.js"></script>
     <style type="text/css">
     	body, html {
     		width:100%;
@@ -39,13 +41,6 @@
 				   rel: 'stylesheet',
 				   type: 'text/css',
 				   href: 'css/style.css'
-				}).appendTo('head');
-			});
-			$.getScript("js/Chart.min.js", function(){
-				$('<link/>', {
-				   rel: 'stylesheet',
-				   type: 'text/css',
-				   href: 'css/Chart.min.css'
 				}).appendTo('head');
 			});
 		}
