--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		      }]
 		    }, {
 		      label: 'Accepted',
-		      backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
+		      backgroundColor: color(window.chartColors.green).alpha(0.5).rgbString(),
 		      borderColor: window.chartColors.green,
 		      fill: false,
 		      data: [{
@@ -79,7 +79,7 @@
 		      }]
 		    }, {
 		      label: 'Total',
-		      backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
+		      backgroundColor: color(window.chartColors.yellow).alpha(0.5).rgbString(),
 		      borderColor: window.chartColors.yellow,
 		      fill: false,
 		      data: [{
