--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="css/Chart.min.css">
     <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/moment.min.js"></script>
     <script type="text/javascript" src="js/Chart.min.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
     <style type="text/css">
@@ -47,85 +48,129 @@
 				}).appendTo('head');
 			});
 		}
+	</script>
+	<button id="randomizeData">Randomize Data</button>
+	<button id="addData">Add Data</button>
+	<button id="removeData">Remove Data</button>
+	<script>
+		function newDate(days) {
+			return moment().add(days, 'd').toDate();
+		}
+
+		function newDateString(days) {
+			return moment().add(days, 'd').format();
+		}
+
 		var color = Chart.helpers.color;
-		console.log(color);
 		var config = {
-		  type: 'line',
-		  data: {
-		    datasets: [{
-		      label: 'Speed',
-		      backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
-		      borderColor: window.chartColors.red,
-		      fill: false,
-		      data: [{
-		        x: 0,
-		        y: 0
-		      }],
-		    }, {
-		      label: 'Solved',
-		      backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
-		      borderColor: window.chartColors.blue,
-		      fill: false,
-		      data: [{
-		        x: 0,
-		        y: 0
-		      }]
-		    }, {
-		      label: 'Accepted',
-		      backgroundColor: color(window.chartColors.green).alpha(0.5).rgbString(),
-		      borderColor: window.chartColors.green,
-		      fill: false,
-		      data: [{
-		        x: 0,
-		        y: 0
-		      }]
-		    }, {
-		      label: 'Total',
-		      backgroundColor: color(window.chartColors.yellow).alpha(0.5).rgbString(),
-		      borderColor: window.chartColors.yellow,
-		      fill: false,
-		      data: [{
-		        x: 0,
-		        y: 0
-		      }]
-		    }]
-		  },
-		  options: {
-		    responsive: true,
-		    title: {
-		      display: true,
-		      text: 'Hashing Chart'
-		    },
-		    scales: {
-		      xAxes: [{
-		        type: 'time',
-		        display: true,
-		        scaleLabel: {
-		          display: true,
-		          labelString: 'Time'
-		        },
-		        ticks: {
-		          major: {
-		            fontStyle: 'bold',
-		            fontColor: '#FF0000'
-		          }
-		        }
-		      }],
-		      yAxes: [{
-		        display: true,
-		        scaleLabel: {
-		          display: true,
-		          labelString: 'value'
-		        }
-		      }]
-		    }
-		  }
+			type: 'line',
+			data: {
+				datasets: [{
+					label: 'Dataset with string point data',
+					backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
+					borderColor: window.chartColors.red,
+					fill: false,
+					data: [{
+						x: newDateString(0),
+						y: randomScalingFactor()
+					}, {
+						x: newDateString(2),
+						y: randomScalingFactor()
+					}, {
+						x: newDateString(4),
+						y: randomScalingFactor()
+					}, {
+						x: newDateString(5),
+						y: randomScalingFactor()
+					}],
+				}, {
+					label: 'Dataset with date object point data',
+					backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
+					borderColor: window.chartColors.blue,
+					fill: false,
+					data: [{
+						x: newDate(0),
+						y: randomScalingFactor()
+					}, {
+						x: newDate(2),
+						y: randomScalingFactor()
+					}, {
+						x: newDate(4),
+						y: randomScalingFactor()
+					}, {
+						x: newDate(5),
+						y: randomScalingFactor()
+					}]
+				}]
+			},
+			options: {
+				responsive: true,
+				title: {
+					display: true,
+					text: 'Chart.js Time Point Data'
+				},
+				scales: {
+					xAxes: [{
+						type: 'time',
+						display: true,
+						scaleLabel: {
+							display: true,
+							labelString: 'Date'
+						},
+						ticks: {
+							major: {
+								fontStyle: 'bold',
+								fontColor: '#FF0000'
+							}
+						}
+					}],
+					yAxes: [{
+						display: true,
+						scaleLabel: {
+							display: true,
+							labelString: 'value'
+						}
+					}]
+				}
+			}
 		};
 
 		window.onload = function() {
 			var ctx = document.getElementById('canvas').getContext('2d');
 			window.myLine = new Chart(ctx, config);
 		};
+
+		document.getElementById('randomizeData').addEventListener('click', function() {
+			config.data.datasets.forEach(function(dataset) {
+				dataset.data.forEach(function(dataObj) {
+					dataObj.y = randomScalingFactor();
+				});
+			});
+
+			window.myLine.update();
+		});
+		document.getElementById('addData').addEventListener('click', function() {
+			if (config.data.datasets.length > 0) {
+				config.data.datasets[0].data.push({
+					x: newDateString(config.data.datasets[0].data.length + 2),
+					y: randomScalingFactor()
+				});
+				config.data.datasets[1].data.push({
+					x: newDate(config.data.datasets[1].data.length + 2),
+					y: randomScalingFactor()
+				});
+
+				window.myLine.update();
+			}
+		});
+
+		document.getElementById('removeData').addEventListener('click', function() {
+			config.data.datasets.forEach(function(dataset) {
+				dataset.data.pop();
+			});
+
+			window.myLine.update();
+		});
 	</script>
 </body>
 </html>
