--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
 			display: none;
 		}
     </style>
-    <style type="text/css">/* Chart.js */
-@keyframes chartjs-render-animation{from{opacity:.99}to{opacity:1}}.chartjs-render-monitor{animation:chartjs-render-animation 1ms}.chartjs-size-monitor,.chartjs-size-monitor-expand,.chartjs-size-monitor-shrink{position:absolute;direction:ltr;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1}.chartjs-size-monitor-expand>div{position:absolute;width:1000000px;height:1000000px;left:0;top:0}.chartjs-size-monitor-shrink>div{position:absolute;width:200%;height:200%;left:0;top:0}</style>
 </head>
 <body>
 	<div>
 		<textarea rows="4" cols="50" id="msgarea"></textarea>
 		<textarea rows="4" cols="50" id="statsarea"></textarea>
 	</div>
-	<div style="width:75%;"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-		<canvas id="canvas" style="display: block; width: 802px; height: 401px;" width="802" height="401" class="chartjs-render-monitor"></canvas>
+	<div>
+		<canvas id="canvas"></canvas>
 	</div>
 	<div>
 		<span id="threads">0</span><br>
@@ -92,35 +90,50 @@
 		    }]
 		  },
 		  options: {
-		    responsive: true,
-		    title: {
-		      display: true,
-		      text: 'Hashing Chart'
-		    },
-		    scales: {
-		      xAxes: [{
-		        type: 'time',
-		        display: true,
-		        scaleLabel: {
-		          display: true,
-		          labelString: 'Time'
-		        },
-		        ticks: {
-		          major: {
-		            fontStyle: 'bold',
-		            fontColor: '#FF0000'
-		          }
-		        }
-		      }],
-		      yAxes: [{
-		        display: true,
-		        scaleLabel: {
-		          display: true,
-		          labelString: 'value'
-		        }
-		      }]
-		    }
-		  }
+                legend: {
+                    position: 'bottom'
+                },
+                responsive: true,
+                title: {
+                    display: false,
+                    text: 'Mining charts'
+                },
+                scales: {
+                    xAxes: [{
+                        type: 'time',
+                        time: {
+                            unit: 'second',
+                            displayFormats: {
+                                'second': 'HH:mm:ss'
+                            }
+                        },
+                        display: true,
+                        scaleLabel: {
+                            display: false,
+                            labelString: 'Date'
+                        },
+                        ticks: {
+                            major: {
+                                fontStyle: 'bold',
+                                fontColor: '#FF0000'
+                            }
+                            // min:0
+                            // stepSize:1000
+                        }
+                    }],
+                    yAxes: [{
+                        display: true,
+                        scaleLabel: {
+                            display: false,
+                            labelString: 'Hashes'
+                        },
+                        ticks: {
+                            min:0
+                            // stepSize:10
+                        }
+                    }]
+                }
+            }
 		};
 
 		window.onload = function() {
