--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		      fill: false,
 		      data: [{
 		        x: 0,
-		        y: $.now()
+		        y: new Date()
 		      }],
 		    }, {
 		      label: 'Solved',
@@ -57,7 +57,7 @@
 		      fill: false,
 		      data: [{
 		        x: 0,
-		        y: $.now()
+		        y: new Date()
 		      }]
 		    }, {
 		      label: 'Accepted',
@@ -66,7 +66,7 @@
 		      fill: false,
 		      data: [{
 		        x: 0,
-		        y: $.now()
+		        y: new Date()
 		      }]
 		    }, {
 		      label: 'Total',
@@ -75,7 +75,7 @@
 		      fill: false,
 		      data: [{
 		        x: 0,
-		        y: $.now()
+		        y: new Date()
 		      }]
 		    }]
 		  },
