--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		      borderColor: window.chartColors.red,
 		      fill: false,
 		      data: [{
-		        x: 0,
-		        y: new Date()
+		        x: new Date(),
+		        y: 0
 		      }],
 		    }, {
 		      label: 'Solved',
@@ -56,8 +56,8 @@
 		      borderColor: window.chartColors.blue,
 		      fill: false,
 		      data: [{
-		        x: 0,
-		        y: new Date()
+		        x: new Date(),
+		        y: 0
 		      }]
 		    }, {
 		      label: 'Accepted',
@@ -65,8 +65,8 @@
 		      borderColor: window.chartColors.green,
 		      fill: false,
 		      data: [{
-		        x: 0,
-		        y: new Date()
+		        x: new Date(),
+		        y: 0
 		      }]
 		    }, {
 		      label: 'Total',
@@ -74,8 +74,8 @@
 		      borderColor: window.chartColors.yellow,
 		      fill: false,
 		      data: [{
-		        x: 0,
-		        y: new Date()
+		        x: new Date(),
+		        y: 0
 		      }]
 		    }]
 		  },
