--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script type="text/javascript" src="js/moment.min.js"></script>
     <script type="text/javascript" src="js/Chart.min.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
+    <script src="js/raphael-2.1.4.min.js"></script>
+    <script src="js/justgage.js"></script>
     <style type="text/css">
     	body, html {
     		width:100%;
@@ -26,6 +28,7 @@
 	</div>
 	<div>
 		<canvas id="canvas"></canvas>
+		<div id="g1" class="gauge"></div>
 	</div>
 	<div>
 		<span id="threads">0</span><br>
@@ -136,6 +139,53 @@
 				startChart();
 			});
 		}
+
+
+
+
+document.addEventListener("DOMContentLoaded", function(event) {
+
+        var g1 = new JustGage({
+            id: "g1",
+            title: "Max is 100.",
+            value: 50,
+            min: 0,
+            max: 100,
+            decimals: 0,
+            gaugeWidthScale: 0.6
+        });
+
+        document.getElementById('g1_refresh').addEventListener('click', function() {
+            g1.refresh(getRandomInt(0, 100));
+        });
+
+        document.getElementById('g1_setmax100').addEventListener('click', function() {
+            g1.refresh(g1.originalValue, 100);
+            g1.txtTitle.attr({
+                "text": "Max is 100."
+            });
+        });
+
+        document.getElementById('g1_setmax200').addEventListener('click', function() {
+            g1.refresh(g1.originalValue, 200);
+            g1.txtTitle.attr({
+                "text": "Whoops, max jumped to 200."
+            });
+            return false;
+        });
+
+        document.getElementById('g1_setmax400').addEventListener('click', function() {
+            g1.refresh(g1.originalValue, 400);
+            g1.txtTitle.attr({
+                "text": "Blimey, max blasted to 400!"
+            });
+            return false;
+        });
+
+    });
+
+
+		
 	</script>
 </body>
 </html>
