--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="js/moment.min.js"></script>
     <script type="text/javascript" src="js/Chart.min.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
-    <script src="js/raphael-2.1.4.min.js/?ts=<?=time();?>"></script>
-    <script src="js/justgage.js/?ts=<?=time();?>"></script>
+    <script src="js/raphael-2.1.4.min.js"></script>
+    <script src="js/justgage.js"></script>
     <style type="text/css">
     	body, html {
     		width:100%;
