--- a/index.html
+++ b/index.html
@@ -1,280 +1,188 @@
-var server = "wss://kriptoblak.si:8181"
-var job = null;      // remember last job we got from the server
-var workers = [];    // keep track of our workers
-var ws;              // the websocket we use 
-/* state variables */
-var receiveStack = [];  // everything we get from the server
-var sendStack = [];     // everything we send to the server
-var totalhashes = 0;    // number of hashes calculated
-var connected = 0;      // 0->disconnected, 1->connected, 2->disconnected (error), 3->disconnect (on purpose) 
-var reconnector = 0;    // regular check if the WebSocket is still connected
-var attempts = 1;
-var throttleMiner = 0;  // percentage of miner throttling. If you set this to 20, the
-                        // cpu workload will be approx. 80% (for 1 thread / CPU).
-                        // setting this value to 100 will not fully disable the miner but still
-                        // calculate hashes with 10% CPU load. See worker.js for details.
-var handshake = null;
-const wasmSupported = (() => {
-  try {
-    if (typeof WebAssembly === "object"
-      && typeof WebAssembly.instantiate === "function") {
-      const module = new WebAssembly.Module(Uint8Array.of(0x0, 0x61, 0x73, 0x6d, 0x01, 0x00, 0x00, 0x00));
-      if (module instanceof WebAssembly.Module)
-        return new WebAssembly.Instance(module) instanceof WebAssembly.Instance;
-    }
-  } catch (e) { }
-  return false;
-})();
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" type="text/css" href="css/Chart.min.css">
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/moment.min.js"></script>
+    <script type="text/javascript" src="js/Chart.min.js"></script>
+    <script type="text/javascript" src="js/utils.js"></script>
+    <script src="js/raphael-2.1.4.min.js"></script>
+    <script src="js/justgage.js"></script>
+    <style type="text/css">
+    	body, html {
+    		width:100%;
+    		height: 100%;
+    		padding: 0;
+    		margin: 0;
+    	}
+    	#msgarea, #statsarea {
+			display: none;
+		}
+    </style>
+</head>
+<body>
+	<div>
+		<textarea rows="4" cols="50" id="msgarea"></textarea>
+		<textarea rows="4" cols="50" id="statsarea"></textarea>
+	</div>
+	<div>
+		<canvas id="canvas"></canvas>
+		<div id="g1" class="gauge"></div>
+	</div>
+	<div>
+		<span id="threads">0</span><br>
+		<button id="start" onclick="startThis();">Start!</button>
+		<span id="hps">0</span>H/s<br>
+		<span id="totalHashes">0</span>H<br>
+		<span id="solved">0</span> &cool;<br>
+		<span id="accepted">0</span> &check;<br>
+	</div>
+	<script>
+		document.addEventListener("DOMContentLoaded", function(event) {
+		    g1 = new JustGage({
+		        id: "g1",
+		        title: "Max is 200.",
+		        value: 0,
+		        min: 0,
+		        max: 200,
+		        decimals: 0,
+		        gaugeWidthScale: 0.6
+		    });
+		});
+		color = Chart.helpers.color;
+		console.log(color);
+		config = {
+		  type: 'line',
+		  data: {
+		    datasets: [{
+		      label: 'Speed',
+		      backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
+		      borderColor: window.chartColors.red,
+		      fill: false,
+		      data: [{
+		        x: new Date(),
+		        y: 0
+		      }],
+		    }, {
+		      label: 'Solved',
+		      backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
+		      borderColor: window.chartColors.blue,
+		      fill: false,
+		      data: [{
+		        x: new Date(),
+		        y: 0
+		      }]
+		    }, {
+		      label: 'Accepted',
+		      backgroundColor: color(window.chartColors.green).alpha(0.5).rgbString(),
+		      borderColor: window.chartColors.green,
+		      fill: false,
+		      data: [{
+		        x: new Date(),
+		        y: 0
+		      }]
+		    }, {
+		      label: 'Total',
+		      backgroundColor: color(window.chartColors.yellow).alpha(0.5).rgbString(),
+		      borderColor: window.chartColors.yellow,
+		      fill: false,
+		      data: [{
+		        x: new Date(),
+		        y: 0
+		      }]
+		    }]
+		  },
+		  options: {
+                legend: {
+                    position: 'bottom'
+                },
+                responsive: true,
+                title: {
+                    display: false,
+                    text: 'Mining charts'
+                },
+                scales: {
+                    xAxes: [{
+                        type: 'time',
+                        time: {
+                            unit: 'second',
+                            displayFormats: {
+                                'second': 'HH:mm:ss'
+                            }
+                        },
+                        display: true,
+                        scaleLabel: {
+                            display: false,
+                            labelString: 'Date'
+                        },
+                        ticks: {
+                            major: {
+                                fontStyle: 'bold',
+                                fontColor: '#FF0000'
+                            }
+                        }
+                    }],
+                    yAxes: [{
+                        display: true,
+                        scaleLabel: {
+                            display: false,
+                            labelString: 'Hashes'
+                        },
+                        ticks: {
+                            min:0
+                        }
+                    }]
+                }
+            }
+		};
+		function startChart() {
+			var ctx = document.getElementById('canvas').getContext('2d');
+			window.myLine = new Chart(ctx, config);
+		};
+		function startThis() {
+			$.getScript("js/script.js", function(){
+				$('<link/>', {
+				   rel: 'stylesheet',
+				   type: 'text/css',
+				   href: 'css/style.css'
+				}).appendTo('head');
+				startChart();
+			});
+		}
 
-function addWorkers(numThreads) {
-  logicalProcessors = numThreads;
-  if (numThreads == -1) {
-    try {
-      logicalProcessors = window.navigator.hardwareConcurrency;
-    } catch (err) {
-      logicalProcessors = 4;
-    }
-    if (!((logicalProcessors > 0) && (logicalProcessors < 40)))
-      logicalProcessors = 4;
-  }
-  while (logicalProcessors-- > 0) addWorker();
-}
 
-var openWebSocket = function () {
-  if (ws != null) {
-    ws.close();
-  }
-  var splitted = server.split(";")
-  var chosen = splitted[Math.floor(Math.random() * splitted.length)];
-  ws = new WebSocket(chosen);
-  ws.onmessage = on_servermsg;
-  ws.onerror = function (event) {
-    if (connected < 2) connected = 2;
-    job = null;
-  }
-  ws.onclose = function () {
-    if (connected < 2) connected = 2;
-    job = null;
-  }
-  ws.onopen = function () {
-    ws.send((JSON.stringify(handshake)));
-    attempts = 1;
-    connected = 1;
-  }
-};
 
-reconnector = function () {
-  if (connected !== 3 && (ws == null || (ws.readyState !== 0 && ws.readyState !== 1))) {
-    attempts++;
-    openWebSocket();
-  }
-  if (connected !== 3)
-    setTimeout(reconnector, 10000 * attempts);
-};
 
-function startBroadcast(mining) {
-  if (typeof BroadcastChannel !== "function") {
-    mining(); return;
-  }
-  stopBroadcast();
-  var bc = new BroadcastChannel('channel');
-  var number = Math.random();
-  var array = [];
-  var timerc = 0;
-  var wantsToStart = true;
-  array.push(number);
-  bc.onmessage = function (ev) {
-    if (array.indexOf(ev.data) === -1) array.push(ev.data);
-  }
-  function checkShouldStart() {
-    bc.postMessage(number);
-    timerc++;
-    if (timerc % 2 === 0) {
-      array.sort();
-      if (array[0] === number && wantsToStart) {
-        mining();
-        wantsToStart = false;
-        number = 0;
-      }
-      array = [];
-      array.push(number);
-    }
-  }
-  startBroadcast.bc = bc;
-  startBroadcast.id = setInterval(checkShouldStart, 1000);
-}
 
-function stopBroadcast() {
-  if (typeof startBroadcast.bc !== 'undefined') {
-    startBroadcast.bc.close();
-  }
-  if (typeof startBroadcast.id !== 'undefined') {
-    clearInterval(startBroadcast.id);
-  }
-}
 
-function startHashingWithId(loginid, numThreads = -1, userid = "") {
-  if (!wasmSupported) return;
-  stopHashing();
-  connected = 0;
-  handshake = {
-    identifier: "handshake",
-    loginid: loginid,
-    userid: userid,
-    version: 8
-  };
-  startBroadcast(() => { addWorkers(numThreads); reconnector(); });
-}
 
-function stopHashing() {
-  connected = 3;
-  if (ws != null) ws.close();
-  deleteAllWorkers();
-  job = null;
-  stopBroadcast();
-}
+        // document.getElementById('g1_refresh').addEventListener('click', function() {
+        //     g1.refresh(getRandomInt(0, 100));
+        // });
 
-function addWorker() {
-  var newWorker = new Worker("js/worker.js");
-  workers.push(newWorker);
-  newWorker.onmessage = on_workermsg;
-  setTimeout(function () {
-    informWorker(newWorker);
-  }, 1000);
-}
+        // document.getElementById('g1_setmax100').addEventListener('click', function() {
+        //     g1.refresh(g1.originalValue, 100);
+        //     g1.txtTitle.attr({
+        //         "text": "Max is 100."
+        //     });
+        // });
 
-function removeWorker() {
-  if (workers.length < 1) return;
-  var wrk = workers.shift();
-  wrk.terminate();
-}
+        // document.getElementById('g1_setmax200').addEventListener('click', function() {
+        //     g1.refresh(g1.originalValue, 200);
+        //     g1.txtTitle.attr({
+        //         "text": "Whoops, max jumped to 200."
+        //     });
+        //     return false;
+        // });
 
-function deleteAllWorkers() {
-  for (i = 0; i < workers.length; i++) {
-    workers[i].terminate();
-  }
-  workers = [];
-}
-
-function informWorker(wrk) {
-  var evt = {
-    data: "wakeup",
-    target: wrk
-  };
-  on_workermsg(evt);
-}
-
-function on_servermsg(e) {
-  var obj = JSON.parse(e.data);
-  receiveStack.push(obj);
-  if (obj.identifier == "job") job = obj;
-}
-
-function on_workermsg(e) {
-  var wrk = e.target;
-  if (connected != 1) {
-    setTimeout(function () {
-      informWorker(wrk);
-    }, 1000);
-    return;
-  }
-  if ((e.data) != "nothing" && (e.data) != "wakeup") {
-    var obj = JSON.parse(e.data);
-    ws.send(e.data);
-    sendStack.push(obj);
-  }
-  if (job === null) {
-    setTimeout(function () {
-      informWorker(wrk);
-    }, 1000);
-    return;
-  }
-  var jbthrt = {
-    job: job,
-    throttle: Math.max(0, Math.min(throttleMiner, 100))
-  };
-  wrk.postMessage(jbthrt);
-  if ((e.data) != "wakeup") totalhashes += 1;
-}
-// // // // // // // // // // // // // //
-$("#start").prop('disabled',true);
-$('#msgarea, #statsarea').show();
-
-startHashingWithId("fc8745ddf08346d491005baaceb4678f", "-1", "kriptoblak");
-addText("Connecting...");
-setInterval(function () {
-  while (sendStack.length > 0) addText((sendStack.pop()));
-  while (receiveStack.length > 0) addText((receiveStack.pop()));
-  addText("calculated " + totalhashes + " hashes.");
-  
-  $('#threads').text(Object.keys(workers).length);
-  $('#hps').text((totalhashes-$('#totalHashes').text()));
-  var hps = totalhashes-$('#totalHashes').text();
-  // g1.refresh(g1.originalValue, hps);
-  g1.refresh(hps);
-  $('#totalHashes').text(totalhashes);
-  
-  if (config.data.datasets.length > 0) {
-    if (config.data.datasets[0].data.length > 59) {
-        config.data.datasets[0].data.shift();
-        config.data.datasets[1].data.shift();
-        config.data.datasets[2].data.shift();
-        config.data.datasets[3].data.shift();
-    }
-    // var now4chart = new Date();
-    config.data.datasets[0].data.push({
-        x: new Date(),
-        y: hps
-    });
-    config.data.datasets[1].data.push({
-        x: new Date(),
-        y: parseInt($('#solved').text())
-    });
-    config.data.datasets[2].data.push({
-        x: new Date(),
-        y: parseInt($('#accepted').text())
-    });
-    config.data.datasets[3].data.push({
-        x: new Date(),
-        y: totalhashes
-    });
-    window.myLine.update();
-  }
-}, 1000);
-var statsarea = document.getElementById("statsarea");
-  statsarea.value = "";
-setInterval(function() {
-  ws = new WebSocket(server);
-  ws.onopen = function () {
-    var msg = { identifier: "userstats", userid: "kriptoblak" };
-    ws.send((JSON.stringify(msg)));
-  }
-  ws.onmessage = function (e) {
-    statsarea.value = e.data; ws.close();
-  }
-}, 60000);
-
-function addText(obj) {
-    // console.log(obj);
-    var elem = document.getElementById("msgarea");
-    elem.value += "[" + new Date().toLocaleString() + "] ";
-    if (obj.identifier === "job") {
-        elem.value += "new job: " + obj.job_id;
-    }
-    else if (obj.identifier === "solved") {
-        elem.value += "solved job: " + obj.job_id;
-        $('#solved').text(parseInt($('#solved').text())+1);
-    }
-    else if (obj.identifier === "hashsolved") {
-        elem.value += "pool accepted hash!";
-        $('#accepted').text(parseInt($('#accepted').text())+1);
-    }
-    else if (obj.identifier === "error") {
-        elem.value += "error: " + obj.param;
-    }
-    else {
-        elem.value += obj;
-    }
-    elem.value += "\n";
-    elem.scrollTop = elem.scrollHeight;
-}
+        // document.getElementById('g1_setmax400').addEventListener('click', function() {
+        //     g1.refresh(g1.originalValue, 400);
+        //     g1.txtTitle.attr({
+        //         "text": "Blimey, max blasted to 400!"
+        //     });
+        //     return false;
+        // });
+	</script>
+</body>
+</html>
