--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 		<button id="start" onclick="startThis();">Start!</button>
 		<span id="hps">0</span>H/s<br>
 		<span id="totalHashes">0</span>H<br>
-		<span id="solved">0</span> &cool;<br>
-		<span id="accepted">0</span> &check;<br>
+		<span id="solved">0</span> &#9752;<br>
+		<span id="accepted">0</span> &#9745;<br>
 	</div>
 	<script>
 		document.addEventListener("DOMContentLoaded", function(event) {
