--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		<button id="start" onclick="startThis();">Start!</button>
 		<span id="hps">0</span>H/s<br>
 		<span id="totalHashes">0</span>H<br>
+		<span id="totalpoolhashes">0</span>H<br>
 		<span id="solved">0</span> &#9752;<br>
 		<span id="accepted">0</span> &#9745;<br>
 	</div>
