--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 		<div id="g1" class="gauge"></div>
 	</div>
 	<div>
-		<span id="threads">0</span><br>
-		<button id="start" onclick="startThis();">Start!</button>
-		<span id="hps">0</span>H/s<br>
-		<span id="totalHashes">0</span>H<br>
-		<span id="totalpoolhashes">0</span>H<br>
-		<span id="solved">0</span> &#9752;<br>
-		<span id="accepted">0</span> &#9745;<br>
+		<button>&oplus;</button><span id="threads">0</span><button>&ominus;</button><br>
+		<button id="start" onclick="startThis();">Start!</button><br>
+		Hashing speed: <span id="hps">0</span>H/s<br>
+		Total hashes: <span id="totalHashes">0</span>H<br>
+		Total pool hashes: <span id="totalpoolhashes">0</span>H<br>
+		&#9752; <span id="solved">0</span>H<br>
+		&#9745; <span id="accepted">0</span>H<br>
 	</div>
 	<script>
 		document.addEventListener("DOMContentLoaded", function(event) {
