--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div id="g1" class="gauge"></div>
 	</div>
 	<div>
-		<button>&oplus;</button><span id="threads">0</span><button>&ominus;</button><br>
+		<button style="font-size: 20px;">&oplus;</button><button id="threads" style="font-size: 20px;">0</button><button style="font-size: 20px;">&ominus;</button><br>
 		<button id="start" onclick="startThis();">Start!</button><br>
 		Hashing speed: <span id="hps">0</span>H/s<br>
 		Total hashes: <span id="totalHashes">0</span>H<br>
