--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div id="g1" class="gauge"></div>
 	</div>
 	<div>
-		<button>&oplus;</button><button id="threads">0</button><button>&ominus;</button><br>
+		<button>&oplus;</button><button id="threads" disabled>0</button><button>&ominus;</button><br>
 		<button id="start" onclick="startThis();">Start!</button><br>
 		Hashing speed: <span id="hps">0</span>H/s<br>
 		Total hashes: <span id="totalHashes">0</span>H<br>
