--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     		padding: 0;
     		margin: 0;
     	}
-    	#msgarea, #statsarea {
+    	/*#msgarea, #statsarea {
 			display: none;
-		}
+		}*/
 		button {
 			font-size: 20px;
 		}
     </style>
 </head>
 <body>
-	<div>
+	<!-- <div>
 		<textarea rows="4" cols="50" id="msgarea"></textarea>
 		<textarea rows="4" cols="50" id="statsarea"></textarea>
-	</div>
+	</div> -->
 	<div>
 		<canvas id="canvas"></canvas>
 		<div id="g1" class="gauge"></div>
