--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 		document.addEventListener("DOMContentLoaded", function(event) {
 		    g1 = new JustGage({
 		        id: "g1",
-		        title: "Max is 200.",
+		        title: "",
+		        label: "H/s",
 		        value: 0,
 		        min: 0,
 		        max: 200,
