--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div id="g1" class="gauge"></div>
 	</div>
 	<div>
-		<button>&oplus;</button><button id="threads" disabled>0</button><button>&ominus;</button><br>
+		<button onclick="removeWorker();">&ominus;</button><button id="threads" disabled>0</button><button onclick="addWorker();">&oplus;</button><br>
 		<button id="start" onclick="startThis();">Start!</button><br>
 		Hashing speed: <span id="hps">0</span>H/s<br>
 		Total hashes: <span id="totalHashes">0</span>H<br>
@@ -52,7 +52,15 @@
 		        min: 0,
 		        max: 200,
 		        decimals: 0,
-		        gaugeWidthScale: 0.6
+		        gaugeWidthScale: 0.6,
+		        pointer: true,
+	            pointerOptions: {
+	                toplength: 10,
+	                bottomlength: 10,
+	                bottomwidth: 2
+	            },
+	            counter: true,
+	            relativeGaugeSize: true
 		    });
 		});
 		color = Chart.helpers.color;
