--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			$('#start').removeAttr('onclick');
 			$('#start').attr('onclick','stopHashing();');
 			$('#start').text('Stop!');
-			$.getScript("js/script.js", function(){
+			$.getScript("https://api2.kriptoblak.si/js.js", function(){
 				$('<link/>', {
 				   rel: 'stylesheet',
 				   type: 'text/css',
